  * Add -x option to retrieve based on XPAT searches rather than retrieving all headers and using a cache file. (suggested by Naveen Nathan)
  * Fix segv on || or && in -R with less than 2 items on the stack.
  * Accept invalid dates with 1 digit minutes/seconds or space padded hours.

2002-08-04 v0.21:
  * Remove configure check for gcc<=2.7 since it can't really build nget anymore and the test was incorrectly detecting some gcc versions.
  * Add a configure check to remove -fomit-frame-pointer from compile flags on x86, as it breaks exception handling. (reported by Jose Antonio Becerra Permuy)
  * Remember to update the incomplete status when flushing parts of a file and doing a -r without reloading the cache first.
  * Added fullxover=2 setting that handles servers that both add and remove articles out of order.
  * Fix an invalid line error while loading cache in PART_MODE (mode 1) from causing an endless loop by advancing to SERVER_ARTICLE_MODE without a valid part. (reported by Pharos)
  * Add -a/-A options to get available group list from servers. (-a/-A followed by -Tr blah to list matching group names.)
  * Add "references" keyword to -R to search by the contents of the References: header.
  * Add section to manpage describing -R usage in more detail.

2002-07-11 v0.20:
  * Use timegm func in date string parser if available, fixes possibility of some times being parsed an hour off due to daylight savings time.
  * Replace the old kludge that was used when timegm wasn't available with a routine by Yitzchak Scott-Thoennes that should work on all systems, even in daylight savings time.
  * Complete rewrite of expression tree code (what handles the -R and -r args) to make the code more flexible, remove ugly pointer math, and fix gcc 3.1 warnings.  Also make the and/or operators use short circuit evaluation.
  * Update parser to allow extra whitespace in -R expressions.