@@ -8,6 +8,7 @@
   * Add -x option to retrieve based on XPAT searches rather than retrieving all headers and using a cache file. (suggested by Naveen Nathan)
   * Fix segv on || or && in -R with less than 2 items on the stack.
   * Accept invalid dates with 1 digit minutes/seconds or space padded hours.
+  * Update cppunit tests to cppunit 1.8.0 style.
 
 2002-08-04 v0.21:
   * Remove configure check for gcc<=2.7 since it can't really build nget anymore and the test was incorrectly detecting some gcc versions.
